updates climate plans for chambana

--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -21010,3 +21010,14 @@ battery storage for each {PJM} zone, region, locational deliverability area
 	note = {Publisher: Annual Reviews},
 	file = {Full Text:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/ISXJCMUV/Shen et al. - 2021 - Facilitating Power Grid Decarbonization with Distributed Energy Resources Lessons from the United S.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/AK36R8YU/annurev-environ-111320-071618.html:text/html},
 }
+
+@misc{illinois_commerce_commision_icc_citizens_2022,
+	title = {Citizens' Guide to the Illinois Commerce Commission},
+	url = {https://icc.illinois.gov/api/web-management/documents/downloads/public/Citizens%20Guide%20to%20ICC.pdf},
+	publisher = {Illinois Commerce Commission},
+	author = {{Illinois Commerce Commision (ICC)}},
+	urldate = {2025-07-30},
+	date = {2022},
+	langid = {english},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/YMQKY6VU/Citizens%20Guide%20to%20ICC.pdf.pdf:application/pdf},
+}
