--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -106,5 +106,7 @@
 \acro{btm}[BTM]{behind-the-meter}
 \acro{eia}[EIA]{Energy Information Administration}
 \acro{der}[DER]{distributed energy resource}
+\acro{mes}[MES]{Minimum Equity Standard}
+\acro{rec}[REC]{renewable energy credit}
 
 
