updates lit review, methods, and finishes climate plan descriptions

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -27,7 +27,7 @@
 \label{chapter:examples}
 % \input{5-examples/50-intro.tex}
 
-\chapter{Using modeling to enhance just outcomes}
+\chapter{Energy modeling, planning, and justice}
 \label{chapter:communities}
 \input{7-interviews/70-outline}
 
