makes latest changes to benchmark chapter from @katyhuff

--- a/docs/4-benchmark-results/41-1-example-data.tex
+++ b/docs/4-benchmark-results/41-1-example-data.tex
@@ -6,6 +6,7 @@ data for these exercises were generated with
 \begin{align}
     E(t) &= -\sin\left(\frac{2\pi t}{N_{\text{day}}}\right) + \sigma\sin\left(\frac{\pi t}{N_{\text{year}}}\right) + \delta + \chi,
     \intertext{where}
+    E &= \text{electricity demand} \quad \left[\text{MWh}\right] \\
     t &= \text{the indendent variable, time} \quad \left[\text{hours}\right],\nonumber\\
     N_{i} &= \text{the total number of hours in a given period (day/year)},\nonumber\\
     \sigma &= \text{a scaling factor} \quad \left[-\right],\nonumber\\
