--- a/docs/4-benchmark-results/42-1-benchmark-data.tex
+++ b/docs/4-benchmark-results/42-1-benchmark-data.tex
@@ -125,7 +125,7 @@ The basic inputs for \ac{osier} and \ac{temoa} are
 \end{enumerate}
 \noindent
 The time series data for electricity demand, wind energy, and solar energy, come
-from \ac{uiuc}. All of the time series are averaged across several years to
+from \acs{uiuc}. All of the time series are averaged across several years to
 simulate a ``typical'' year. I re-scaled the demand data by the total energy
 demand for Illinois in order for the hourly demand to be on the same scale as
 the default power units (MW) for \ac{osier} technologies. However, this
