--- a/docs/4-benchmark-results/44-four-obj.tex
+++ b/docs/4-benchmark-results/44-four-obj.tex
@@ -9,13 +9,13 @@ this final exercise is to demonstrate that \ac{osier} can optimize many
 objectives, thereby providing more context and confidence for the tool. This
 exercise minimized four objectives simultaneously: total system cost, lifecycle
 carbon emissions, land-use change, and percentage of total energy from
-non-renewable energy sources. Renewable energy sources include solar, wind, and
+non-renewable energy sources. Here, renewable energy sources include solar, wind, and
 biomass. Although batteries are often used in conjunction with \acp{vre}, they
 are not considered ``renewable'' (nor are they a true energy ``source'' since
 they store energy from other sources rather than producing their own). For
 clarity, the ``percent non-renewable'' objective refers to the penetration of
 non-renewable sources as a percentage of the energy produced rather than as a
-percentage of the systems total installed capacity. Figure
+percentage of the system's total installed capacity. Figure
 \ref{fig:4-obj-pareto} shows the objective-space Pareto front for this
 4-dimensional problem.
 
@@ -26,7 +26,7 @@ results with a novel plot, called a \ac{pcp}. This plot is helpful for
 highlighting differences among a small set of solutions with a potentially large
 number of dimensions. Figure \ref{fig:4-obj-pareto} and Figure
 \ref{fig:4-obj-design} are both \acp{pcp}. Although \acp{pcp} show continuous
-lines, they do not show a ``trend''. That is, for a given solution, each
+lines, they do not show a ``trend.'' That is, for a given solution, each
 objective takes on a single value that is plotted on its respective vertical
 axis. The lines connecting these points simply emphasize that these points
 belong to the same solution. Additionally, each objective axis has its own upper
@@ -75,8 +75,8 @@ are frequently assumed to complement each other.
 Figure \ref{fig:4-obj-design-mga} extends the design space results to include
 the \ac{mga} solutions. This plot indicates the design preferences for a
 middling solution, but hides the relationship among energy technologies. The
-most popular technologies in Figure \ref{fig:4-obj-design-mga} are conventional
-nuclear, battery storage, and solar panels. The least popular technologies are
+most prevalent technologies in Figure \ref{fig:4-obj-design-mga} are conventional
+nuclear, battery storage, and solar panels. The least prevalent technologies are
 wind turbines, biomass, and ``advanced'' coal plants. The ``highest renewable'' 
 solution in Figure \ref{fig:4-obj-design} shows a wind turbine capacity of nearly 71
 GW, this point is absent in Figure \ref{fig:4-obj-design-mga} because the vertical
