reorders sections, adds some thoughts, and slightly updates lit review

--- a/docs/2-literature/21-esoms.tex
+++ b/docs/2-literature/21-esoms.tex
@@ -252,6 +252,6 @@ could be said for any choice in the development of an \ac{esom}: Spatial scale,
 time scale, which technologies are included in the model, and more. Chapter
 \ref{chapter:modeling-theory} expands on all three forms of uncertainty and
 introduces a conceptual framework for understanding the modeling process through
-the lens of these these uncertainties. 
+the lens of these uncertainties. 
 
 
