--- a/docs/7-interviews/70-outline.tex
+++ b/docs/7-interviews/70-outline.tex
@@ -65,7 +65,13 @@ modelers and planners would yield superior results. Only Ben Amer et al.
 identify consulting and personnel costs as potential barriers to incorporating
 modeling results into decision making processes.
 
+\textcolor{red}{Is the hypothesis I am testing with this study that
+``municipalities would be better equipped to plan and design their energy
+systems if the available modeling tools were accessible and relevant.'' This
+hypothesis comes from the implicit suppositions in a few papers. }
+
 \subsection{Energy justice and planning}
+
 There is, to date, limited empirical work that investigates the inclusion of
 justice into formal planning proceses at either state or municipal levels. One
 study by Diezmart\'inez et al. looked at 58 climate action plans sampled from
@@ -82,13 +88,19 @@ sources of injustice \cite{diezmartinez_us_2022}.
 Another study reviewed 60 energy transition ``visioning documents'' prepared by
 non-profits and advocacy organizations in the United States, rather than formal
 planning documents developed by city officials \cite{elmallah_frontlining_2022}.
-This study found 6 principles of energy justice in planning... they are... 
+This study found 6 principles of planning for energy justice.
+\begin{enumerate}
+    \item Being place-based --- recognizing that each city's situation is unique
+    and that there are no universal solutions.
+    \item Addressing the root cause and legacies of inequality
+    \item Shifting the balance of power from existing forms of energy governance
+    \item Creating new, cooperative, and participatory systems of energy governance and ownership
+    \item Adopting a rights-based approach
+    \item Rejecting false solutions
+\end{enumerate}
 
 
-\textcolor{red}{Is the hypothesis I am testing with this study that
-``municipalities would be better equipped to plan and design their energy
-systems if the available modeling tools were accessible and relevant.'' This
-hypothesis comes from the implicit suppositions in a few papers. }
+\subsection{Novelty of this work}
 
 \textcolor{red}{What are some of the novelties of the present study}
 \begin{enumerate}
@@ -97,67 +109,6 @@ hypothesis comes from the implicit suppositions in a few papers. }
     in energy policy for some places in Illinois.
     \item Evaluates a specific energy modeling tool and features of that tool.
 \end{enumerate}
-
-\section{Energy Procurement in Illinois}
-
-This section describes the ways consumers and municipalities procure electricity
-in Illinois. This context is essential for understanding the structural barriers
-preventing municipalities from taking advantage of energy modeling tools to aid
-planning and elucidates the frequently limited scope of municipal energy plans.
-Figure \ref{fig:illinois-flow-chart} provides a visual guide for electricity
-procurement from the perspective of an individual consumer with arrows
-indicating directional relationships.
-
-First, Illinois belongs to two \acp{rto}, \ac{pjm} and \ac{miso}, which conduct
-wholesale energy auctions through which market participants purchase
-electricity. Residential customers do not participate directly in open energy
-market. Instead they interface with a utility or municipality which procures
-electricity on their behalf. Some municipalities, such as Naperville, own their
-own utilities. Second, Illinois restructured its electricity market in 1997,
-prohibiting \aclp{iou} from owning both transmission infrastructure and
-generating infrastructure \cite{illinois_90th_general_assembly_electric_1997}.
-This means that \acp{iou} must purchase electricity on the open market rather
-than having in-house generation. Municipally-owned utilities are exempt from
-this rule. Finally, the deregulation of Illinois' electricity market limits the
-state legislature's ability to force the construction of new generation or the
-retirement of old generation. The legislature can direct the \ac{ipa} to procure
-a certain amount of generation from specific generators and the legislature may
-enact policies which incentivize desirable generators to come to Illinois.
-
-
-\begin{figure}[ht!]
-    \centering
-    \includegraphics[width=0.75\columnwidth]{figures/07_interview_chapter/illinois-electric-choice.drawio.png}
-    % \resizebox{0.75\columnwidth}{!}{\input{figures/07_interview_chapter/illinois-electric-choice.drawio.svg}}
-    \caption{A flow chart describing how consumers may procure electricity in
-    Illinois. \textcolor{red}{!! NOT FINAL !!}}
-    \label{fig:illinois-flow-chart}
-\end{figure}
-
-Figure \ref{fig:illinois-flow-chart} shows consumers residing within
-municipalities. Municipalities that own and operate a utility may obtain
-electric supply by owning electric generation, participating in the energy
-market, or contracting with another organization, such as the \ac{imea}, to
-handle the supply procurement. In turn, \ac{imea} can procure energy by owning
-generating capacity, or through the energy market. Most municipalities in
-Illinois are served by one of the two major \acp{iou}, Ameren or ComEd. Due to
-the Public Utilities Act of 1997, these utilities cannot profit on the supply of
-electricity \cite{illinois_90th_general_assembly_electric_1997}. Rather, their
-customers (consumers or municipalities) direct the utility to supply electricity
-from a chosen supplier. If customers do not choose a supplier, they will receive
-the default supply, procured by the \ac{ipa}. In Illinois, consumers can opt for
-their municipality (where allowed) to negotiate electricity prices on their
-behalf through \ac{mca}. Municipalities may either select from an \ac{ares} or
-choose the default supply.\footnote{An \ac{ares} is an entity certified by the
-\ac{icc} that sells electricity to customers. This electricity is generated
-through privately owned resources or through purchases from the electricity
-market.} Although not depicted in Figure \ref{fig:illinois-flow-chart},
-consumers that reside in a municipality without \ac{mca} may still choose to
-purchase electricity supply from an \ac{ares} as an individual. Of course,
-consumers and municipalities may, where permitted, obtain energy by investing in
-\ac{btm} resources, commonly rooftop solar panels or batteries. Municipalities
-that currently outsource their electricity procurement to \ac{imea} are
-contractually prohibited from building certain \ac{btm} resources.
  
 % This section answers the following questions \begin{enumerate} \item Where do
 % consumers get their energy from? For example, the open energy market, their
@@ -478,8 +429,70 @@ that
     community boundaries as well as those created within.}
 \end{quote}
 
+\section{Energy Procurement in Illinois}
 
-\section{Aim 1: Energy planning and the use of models}
+This section describes the ways consumers and municipalities procure electricity
+in Illinois. This brief interlude provides essential context for understanding the structural barriers
+preventing municipalities from taking advantage of energy modeling tools to aid
+planning and elucidates the frequently limited scope of municipal energy plans.
+Figure \ref{fig:illinois-flow-chart} provides a visual guide for electricity
+procurement from the perspective of an individual consumer with arrows
+indicating directional relationships.
+
+First, Illinois belongs to two \acp{rto}, \ac{pjm} and \ac{miso}, which conduct
+wholesale energy auctions through which market participants purchase
+electricity. Residential customers do not participate directly in open energy
+market. Instead they interface with a utility or municipality which procures
+electricity on their behalf. Some municipalities, such as Naperville, own their
+own utilities. Second, Illinois restructured its electricity market in 1997,
+prohibiting \aclp{iou} from owning both transmission infrastructure and
+generating infrastructure \cite{illinois_90th_general_assembly_electric_1997}.
+This means that \acp{iou} must purchase electricity on the open market rather
+than having in-house generation. Municipally-owned utilities are exempt from
+this rule. Finally, the deregulation of Illinois' electricity market limits the
+state legislature's ability to force the construction of new generation or the
+retirement of old generation. The legislature can direct the \ac{ipa} to procure
+a certain amount of generation from specific generators and the legislature may
+enact policies which incentivize desirable generators to come to Illinois.
+
+
+\begin{figure}[ht!]
+    \centering
+    \includegraphics[width=0.75\columnwidth]{figures/07_interview_chapter/illinois-electric-choice.drawio.png}
+    % \resizebox{0.75\columnwidth}{!}{\input{figures/07_interview_chapter/illinois-electric-choice.drawio.svg}}
+    \caption{A flow chart describing how consumers may procure electricity in
+    Illinois. \textcolor{red}{!! NOT FINAL !!}}
+    \label{fig:illinois-flow-chart}
+\end{figure}
+
+Figure \ref{fig:illinois-flow-chart} shows consumers residing within
+municipalities. Municipalities that own and operate a utility may obtain
+electric supply by owning electric generation, participating in the energy
+market, or contracting with another organization, such as the \ac{imea}, to
+handle the supply procurement. In turn, \ac{imea} can procure energy by owning
+generating capacity, or through the energy market. Most municipalities in
+Illinois are served by one of the two major \acp{iou}, Ameren or ComEd. Due to
+the Public Utilities Act of 1997, these utilities cannot profit on the supply of
+electricity \cite{illinois_90th_general_assembly_electric_1997}. Rather, their
+customers (consumers or municipalities) direct the utility to supply electricity
+from a chosen supplier. If customers do not choose a supplier, they will receive
+the default supply, procured by the \ac{ipa}. In Illinois, consumers can opt for
+their municipality (where allowed) to negotiate electricity prices on their
+behalf through \ac{mca}. Municipalities may either select from an \ac{ares} or
+choose the default supply.\footnote{An \ac{ares} is an entity certified by the
+\ac{icc} that sells electricity to customers. This electricity is generated
+through privately owned resources or through purchases from the electricity
+market.} Although not depicted in Figure \ref{fig:illinois-flow-chart},
+consumers that reside in a municipality without \ac{mca} may still choose to
+purchase electricity supply from an \ac{ares} as an individual. Of course,
+consumers and municipalities may, where permitted, obtain energy by investing in
+\ac{btm} resources, commonly rooftop solar panels or batteries. Municipalities
+that currently outsource their electricity procurement to \ac{imea} are
+contractually prohibited from building certain \ac{btm} resources.
+
+\section{Results}
+
+\subsection{Theme 1: Energy planning and the use of models}
 
 None of the municipalities considered in this study, Naperville, Champaign,
 Urbana, nor \ac{uiuc}, use \acp{esom} to guide energy planning and investment
@@ -487,7 +500,7 @@ decisions.
 
 
 
-\section{Aim 2: Considerations of justice in energy planning}
+\subsection{Theme 2: Considerations of justice in energy planning}
 
 At both the state and municipal levels, energy justice considerations are driven
 primarily by advocacy groups, such as \ac{cub} and \ac{nest}, lobbying for its
@@ -525,7 +538,7 @@ Other items to discuss
 
 % \block
 
-\section{Aim 3: \ac{osier}'s planning potential}
+\subsection{Theme 3: \ac{osier}'s planning potential}
 
 % This chapter addresses my proposal to ``validate'' \ac{osier} by conducting a
 % case study of energy planning processes in Champaign-Urbana through interviews
@@ -553,3 +566,34 @@ Other items to discuss
 %     johannsen_municipal_2023, fleischhacker_portfolio_2019} \item There have
 %     also been studies investigating the development of models for, and use by,
 %     city and urban planners. \end{itemize}
+
+
+\section{Discussion}
+
+Some ideas to consider ...
+
+\begin{enumerate}
+    \item There is a growing body of literature which recognizes that, despite
+    the important role for municipalities in the energy transition, municipal
+    governments may not be the best venue for energy modeling due to their lack
+    of resources, expertise, and agency over their energy systems. However,
+    nonprofits and grassroots organizations may benefit from energy modeling to
+    aid the development of their energy visions which can then be used to lobby
+    for policy changes (e.g., \ac{nest}'s interest in \ac{osier}).
+\end{enumerate}
+
+Maybe discuss some of the benefits and limitations of \ac{osier} ...
+
+Benefits include
+\begin{enumerate}
+    \item \ac{osier} allows for any number of constraints, objectives, and even
+    allows for user-defined objectives, a design philosophy consistent with the
+    first principle from Elmallah et al. which called for ``place-based''
+    solutions \cite{elmallah_frontlining_2022}. However, place-based solutions
+    require authentic engagement and ``quantitative metrics cannot replace on
+    the ground work that includes qualitative, community-based approaches in
+    devising policy solutions'' \cite{elmallah_frontlining_2022}. While \ac{osier}
+    can stand alone as an \ac{esom}, it is likely most effective as part of an 
+    iterative, participatory, approach as outlined by McGookin et al. 2024 
+    \cite{mcgookin_advancing_2024}.
+\end{enumerate}
